src/index.scss
/* ... */
  .dice-button-container{
    margin-left: 10px;
    justify-content: end;
    height: 90px;
    background-color: burlywood;
    align-self: flex-end;
    display: flex;
    flex-direction: column;
  }
  .dice-container{
    display: flex;
    justify-content: space-around;
  }
  .button-class{
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: transparent;
    --blue: #007bff;
    --indigo: #6610f2;
    --purple: #6f42c1;
    --pink: #e83e8c;
    --red: #dc3545;
    --orange: #fd7e14;
    --yellow: #ffc107;
    --green: #28a745;
    --teal: #20c997;
    --cyan: #17a2b8;
    --white: #fff;
    --gray: #6c757d;
    --gray-dark: #343a40;
    --primary: #007bff;
    --secondary: #6c757d;
    --success: #28a745;
    --info: #17a2b8;
    --warning: #ffc107;
    --danger: #dc3545;
    --light: #f8f9fa;
    --dark: #343a40;
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
    box-sizing: border-box;
    margin: 0;
    font-family: inherit;
    overflow: visible;
    text-transform: none;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    user-select: none;
    border: 1px solid transparent;
    padding: .375rem .75rem;
    font-size: 12px;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    color: #fff;
    background-color: #007bff;
    border-color: #007bff;
    -webkit-appearance: button;
    cursor: pointer;
    height: 31px;
    align-self: flex-end;

  }

  @keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
  
  .spinning-dice {
    font-size: 2em;
    display: inline-block;
    animation: spin infinite linear;
  }
  .pulsating-effect{
    animation: pulse 2s infinite;
  }
  @keyframes pulse {
    0% {
      transform: scale(0.8);
      box-shadow: 0 0 0 0 rgba(52, 152, 219, 0.7);
    }
    50% {
      transform: scale(1.2);
      box-shadow: 0 0 0 20px rgba(52, 152, 219, 0);
    }
    100% {
      transform: scale(0.8);
      box-shadow: 0 0 0 0 rgba(52, 152, 219, 0);
    }
  }
  
  @media only screen and (max-width: 600px) {
    .dice-button-container{
      justify-content: end;
      margin-left: 40%;
      margin-top: 10px;
    }
    .container-square {
      position: relative;
      max-width: 90vw;
      aspect-ratio:1/1;
      margin:auto;
    }
    .home-colors.red{
      width: 0; 
      height: 0; 
      border-bottom: 32px solid $red;
      border-left: 33px solid $green;
      border-top: 33px solid $yellow;
      border-right: 33px solid $blue;
    }
    .home-colors.green{
      width: 0; 
      height: 0; 
      border-bottom: 32px solid $green;
      border-left: 33px solid $yellow;
      border-top: 33px solid $blue;
      border-right: 33px solid $red;
    }
    .home-colors.yellow{
      width: 0; 
      height: 0; 
      border-bottom: 32px solid $yellow;
      border-left: 33px solid $blue;
      border-top: 33px solid $red;
      border-right: 33px solid $green;
    }
    .home-colors.blue{
      width: 0; 
      height: 0; 
      border-bottom: 32px solid $blue;
      border-left: 33px solid $red;
      border-top: 33px solid $green;
      border-right: 33px solid $yellow;
    }
    .home-square-circle-coin{
      width: 14px;
      height: 14px;
      margin-left: 17%;
      margin-top: 17%;
      border-radius: 50%;
    }
    .fa-arrows-icons{
      font-size:12px!important
  }
  .star-cell{
    font-size:17px!important;
  }
  .ml-3{
    margin-left:3px;
  }
  .ml-2{
    margin-left:2px;
  }
  .ml-4{
    margin-left:4px;
  }
  .mt-3{
    margin-top:3px;
  }
  .mt-2{
    margin-top:2px;
  }
  .mt-4{
    margin-top:4px;
  }
    }

